<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".drive.DriveFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="#ff5a5d5a"
            android:contentDescription="@string/fab_search"
            android:src="@drawable/ic_search_24"
            app:borderWidth="0dp"
            app:fabSize="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="35dp"
            tools:src="@drawable/ic_search_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSimulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="#ff5a5d5a"
            android:contentDescription="@string/fab_simulation"
            android:src="@drawable/ic_play_arrow_24"
            app:borderWidth="0dp"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="35dp"
            tools:src="@drawable/ic_play_arrow_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabStopNavigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="#ff5a5d5a"
            android:contentDescription="@string/fab_stop_navigation"
            android:src="@drawable/ic_cancel_24"
            app:borderWidth="0dp"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:maxImageSize="35dp"
            tools:src="@drawable/ic_cancel_24" />

        <TextView
            android:id="@+id/nextCurveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/jump_maybe"
            android:textColor="#CDCDCD"
            android:textSize="25sp"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/nextCurveDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/next_turn"
            android:textColor="#CDCDCD"
            android:textSize="25sp"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextCurveText"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/nextCurveImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextCurveDistance"
            android:contentDescription="@string/next_turn"
            app:tint="#CDCDCD"
            tools:srcCompat="@drawable/arrow_left_20"
            />

        <FrameLayout
            android:id="@+id/mapFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".45">

            <cz.feldis.actualspeed.view.FocusView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

        <include
            android:id="@+id/speedInfoLayout"
            layout="@layout/layout_speed_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/mapFrameLayout" />

        <TextView
            android:id="@+id/street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/street_will_be_shown_here"
            android:textAlignment="center"
            android:textColor="#CDCDCD"
            android:textSize="25sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/fabStopNavigation"
            app:layout_constraintRight_toLeftOf="@id/fabSimulation"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>